name:                parsers
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/parsers#readme
license:             BSD3
license-file:        LICENSE
author:              Derek Morr
maintainer:          morr.derek@gmail.com
copyright:           2017 Derek Morr
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib, Marc
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable parsers-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , parsers
  default-language:    Haskell2010

test-suite parsers-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , hspec
                     , parsers
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/parsers
